src/pro_miniaudio.h

/**
 * union device_id_t
 * @brief Union to store device identifiers for different audio backends.
 */
typedef union {
    unsigned short wasapi[64]; /* WASAPI uses a wchar_t string for identification. */
    unsigned char dsound[16];  /* DirectSound uses a GUID for identification. */
    unsigned int winmm;        /* WinMM expects a UINT_PTR for device identification. */
    char alsa[256];            /* ALSA uses a name string for identification. */
    char pulse[256];           /* PulseAudio uses a name string for identification. */
    int jack;                  /* JACK always uses default devices. */
    char coreaudio[256];       /* Core Audio uses a string for identification. */
    char sndio[256];           /* Sndio uses "snd/0", etc. */
    char audio4[256];          /* Audio4 uses "/dev/audio", etc. */
    char oss[64];              /* OSS uses "dev/dsp0", etc. */
    signed int aaudio;         /* AAudio uses a 32-bit integer for identification. */
    unsigned int opensl;       /* OpenSL|ES uses a 32-bit unsigned integer. */
    char webaudio[32];         /* WebAudio uses default devices. */
    union {
        int i;       /* Custom backend integer identifier. */
        char s[256]; /* Custom backend string identifier. */
        void *p;     /* Custom backend pointer identifier. */
    } custom;        /* Identifier for custom backends. */
    int nullbackend; /* Null backend uses an integer identifier. */
} device_id_t;
/**
 * struct result_t
 * @brief Structure to represent the result of a function call.
 */
typedef struct {
    result_data_t data; /* Result data. */
    data_type_t type;   /* Type of the result data. */
    error_code_t code;  /* Error code indicating the result status. */
    char message[256];  /* Error message, if applicable. */
} result_t;
/**
 * @enum sample_format_t
 * @brief Enum to represent supported audio sample formats.
 */
typedef enum {
    sample_format_unknown = 0, /* Unknown or unsupported format. */
    sample_format_u8 = 1,      /* Unsigned 8-bit integer. */
    sample_format_s16 = 2,     /* Signed 16-bit integer. */
    sample_format_s24 = 3,     /* Signed 24-bit integer. */
    sample_format_s32 = 4,     /* Signed 32-bit integer. */
    sample_format_f32 = 5,     /* 32-bit floating point. */
    sample_format_count        /* Number of supported formats. */
} sample_format_t;
/**
 * struct supported_format_t
 * @brief Structure to describe a supported audio data format.
 */
typedef struct {
    sample_format_t format; /* Audio sample format. */
    uint32_t channels;      /* Number of channels. */
    uint32_t sampleRate;    /* Sample rate in Hertz. */
    uint32_t flags;         /* Format flags (reserved for future use). */
} supported_format_t;
/**
 * struct device_info_t
 * @brief Structure to describe an audio device.
 */
typedef struct {
    device_id_t id;                        /* Unique identifier for the device. */
    char name[MAX_DEVICE_NAME_LENGTH + 1]; /* Device name (null-terminated string). */
    bool isDefault;                        /* Indicates if this is the default device. */
    uint32_t dataFormatCount;              /* Number of supported formats. */
    supported_format_t dataFormats[64];    /* Array of supported audio formats. */
} device_info_t;
/**
 * @brief Destroys the Context and releases all associated resources.
 *
 * This function cleans up memory and system resources allocated by the Context.
 *
 * @param context Pointer to the Context to be destroyed. Passing NULL is safe and has no effect.
 * @return A `result_t` structure indicating success or failure.
 */
FFI_PLUGIN_EXPORT result_t audio_context_destroy(void *context);
/* Playback Device */

/**
 * struct playback_data_t
 * @brief Structure to represent data being pushed to a playback device.
 */
typedef struct {
    sample_format_t format; /* Audio sample format. */
    void *pUserData;        /* Pointer to the audio data. */
    uint32_t sizeInBytes;   /* Size of the data in bytes. */
} playback_data_t;
/* Waveform generation */

/**
 * @enum waveform_type_t
 * @brief Enum representing different types of waveforms.
 */
typedef enum {
    waveform_type_sine,     /* Sine waveform. */
    waveform_type_square,   /* Square waveform. */
    waveform_type_triangle, /* Triangle waveform. */
    waveform_type_sawtooth  /* Sawtooth waveform. */
} waveform_type_t;
/**
 * @brief Creates a waveform generator with the specified parameters.
 *
 * @param format Audio sample format.
 * @param channels Number of audio channels.
 * @param sampleRate Sample rate in Hertz.
 * @param waveformType Type of waveform to generate.
 * @param amplitude Amplitude of the waveform.
 * @param frequency Frequency of the waveform in Hertz.
 * @return A `result_t` structure containing a pointer to the waveform generator or an error code.
 */
FFI_PLUGIN_EXPORT result_t waveform_create(sample_format_t format,
                                           uint32_t channels,
                                           uint32_t sampleRate,
                                           waveform_type_t waveformType,
                                           double amplitude,
                                           double frequency);
/**
 * @brief Destroys a waveform generator and releases its resources.
 *
 * @param waveform Pointer to the waveform generator to destroy.
 */
FFI_PLUGIN_EXPORT void waveform_destroy(void *waveform);
/**
 * @brief Reads PCM frames from the waveform generator.
 *
 * @param waveform Pointer to the waveform generator.
 * @param pFramesOut Pointer to the output buffer for PCM frames.
 * @param framesCount Number of frames to read.
 * @param pFramesRead Pointer to a variable to store the number of frames read.
 * @return A `result_t` structure indicating success or failure.
 */
FFI_PLUGIN_EXPORT result_t waveform_read_pcm_frames_with_buffer(void *waveform,
                                                                void *pFramesOut,
                                                                uint64_t framesCount,
                                                                uint64_t *pFramesRead);